# Aenn

./: README.md  package-lock.json
backend/: Cargo.toml  README.md  init_dataset.txt  main.go  reset_db.sh  test.sh
backend/migrations/: 20240329184313_Aenn.sql
backend/src/: articles.rs  db.rs  main.rs  types.rs
frontend/: articles.json  comments.json  package-lock.json  package.json
frontend/pages/api/articles/: index.ts
frontend/src/: App.tsx
frontend/src/app/: ArticleCard.tsx  global.css  layout.tsx  page.module.css  page.tsx  types.ts
frontend/src/app/articles/[slug]/: ArticleContent.tsx  Badg.tsx  Comments.tsx  TagsInput.tsx  markdown.css  page.tsx
frontend/src/app/articles/new/: page.tsx
