[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7.4", features = ["mysql", "json", "runtime-tokio-rustls", "migrate", "runtime-tokio-native-tls", "chrono"] }
chrono = { version = "0.4.37", features = ["serde"] }
serde = "1"
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0.81"
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = ["serde", "v4"] }